# intro-to-vml-practice

./: .gitignore  pyproject.toml
data/: .gitkeep
modules/m0_math/: README.md
modules/m1_basic_ip/: README.md
modules/m2_edge_seg/: README.md
modules/m3_features/: README.md
modules/m4_classical_ml/: README.md
modules/m5_cnn/: README.md
modules/m6_advanced/: README.md
modules/m7_optimization/: README.md
notebooks/m0_math/: 01_vectors_matrices.ipynb  02_gradients.ipynb  03_probability.ipynb  04_gradient_descent.ipynb
notebooks/m1_basic_ip/: 01_convolution.ipynb  02_filters.ipynb  03_histogram.ipynb  04_geometric_transforms.ipynb
notebooks/m2_edge_seg/: 01_otsu.ipynb  02_canny.ipynb
notebooks/m3_features/: 01_harris_corner.ipynb  02_sift.ipynb  03_hog.ipynb
notebooks/m4_classical_ml/: 01_linear_regression.ipynb  02_logistic_regression.ipynb  04_svm.ipynb  (+4 more)
prompts/: m0_math.md  m1_basic_ip.md  m2_edge_seg.md  m3_features.md  m4_classical_ml.md  m5_cnn.md  m6_advanced.md  m7_optimization.md  system_prompt.md
references/: algorithm_map.md  papers.md  textbooks.md
tests/: __init__.py  test_dataset_index.py  test_dataset_split.py  test_error_analysis.py  test_experiments.py  test_inference_eval_predict.py  test_train_cnn.py  test_train_mlp.py  test_train_softmax.py
utils/: __init__.py  gradient_check.py  image_io.py
vml/: __init__.py  cli.py  dataset_index.py  error_analysis.py  experiments.py  image_pipeline.py  inference.py  tiny_cnn.py  torch_data.py  torch_models.py  torch_training.py  train_cnn.py  train_mlp.py  train_softmax.py
(+14 files in other folders)
