[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "intro-to-vml"
version = "0.1.0"
description = "Intro-to-VML: notebooks + from-scratch vision/ML implementations (with a small CLI)."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "Pillow>=9",
  "torch>=2.0",
]

[project.scripts]
vml = "vml.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vml*"]
